# nanomq

./: .codecov.yml  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CodeGuidance.md  Docker-introduction  LICENSE.txt  README.md  SECURITY.md  build.sh  config.cmake.in  crash-39401ea86ef75f8adb863ec33f54dcfe92ad7cdf  crash-4069772ffea36a5663d4c7d527038857a4038b71  crash-47b74c6f889b1be2a09531b82395c3c4156698f6  crash-4a3f6a17509c96324acce01f6b8f0c1a2e305709  crash-64f3eb19d816bf5c2486a000875735684bddffa7  crash-6feb29e977600a586078ad6444a7b0785a2db452  crash-886e8440d228daded1fb84e55ad843f3ec8e9f08  crash-967bf37e6611a01100db81578188967371de9802  crash-afbdc4e8fce6036f70b36dab53666074a6668c80  crash-b0b19a487510c3412f421bb7e29618274f08158b  crash-b257a8c70f4c60f738b7079fa05ffb0ad1d892b5  crash-b2b9dd5284c8483fe8b4cc43d51127b152c8dc8f  crash-c043982e41fdd329056c4992a3a4a782b0f8ec80  crash-c1afbcd9d92945882a95cfa319c8b9858fcca58d  crash-d591e95040aa111c37170e05c1c650bd846a3055  crash-db8adcabaf82accad342ea36f36b1f0008872244  crash-fe7af84115371b35d0321847fca01f2a304004fb  fdbversionConfig.h.in  leak-1d9c6efe1165eff1fb3ab70e1eaa2735d02ddf51  leak-22d8c05ac313130fccb27e0b882561489eb79ad1  leak-4d7909d8196d037777c92d5a9059f0fe06a6e7ac  leak-5a605758db2a8dc87fb8bb59542e530298e7b5d0  leak-962572429eb536b36aabb2f0faaf79b6834e089e  leak-99958fa37f291a1aa72ceb2f5c266f7d8cb6d507  leak-ba69b9a94d8a58fcbd04b71247445a3e7b740df1  leak-d9d2c1e12d5a75db6ec802e6ba10c392591fa4fc  package.mk  (+1 more)
.ci/: remove_unused.py
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: dependabot.yml
build-out/: fuzz_base64  fuzz_hocon_parser
build_base_test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  tmp
build_ci/: CMakeCache.txt
build_ci_small/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  tmp
build_parquet_test/: CMakeCache.txt  CPackConfig.cmake  Makefile  tmp  (+2 more)
nanolib/: CMakeLists.txt  Makefile  cmd.c  conf.c  db_cli.c  env.c  file.c  hash.cc  hash_table.c  mqtt_db.c  msg_pool.c  nano_alloc.c  nano_lmq.c  test.c  test.sh  test_dbtree.c  test_hash.c  zmalloc.c
nanolib/include/: CMakeLists.txt  binary_search.h  cJSON.h  cmd.h  conf.h  cvector.h  db_cli.h  dbg.h  env.h  file.h  hash.h  hash_table.h  mqtt_db.h  msg_pool.h  nano_alloc.h  nano_lmq.h  nanolib.h  test.h  zmalloc.h
nanolib/libs/: base64.c
nanolib/packet_parser/: Makefile  main.c  packet_parser.c  packet_parser.h  test.c
nanolib/testsrc/: msg_pool.c
nanomq/: CMakeLists.txt  Makefile  README.adoc  acl_handler.c  acl_hazard.c  apps.c  aws_bridge.c  bridge.c  cmd.c  cmd_proc.c  conf_api.c  const_string.c  db_cli.c  emq_parser.c  exchange.c  file.c  hashmap.c  license.c  license_dk.c  license_std.c  license_std_v4.c  mqtt_api.c  nano_exchange.c  nanomq.c  nanomq_rule.c  plugin_canp_stream.c  plugin_spi_stream.c  process.c  pub_handler.c  pub_handler_test.c  repub.c  rest_api.c  stream_inject.c  stream_plugin_runtime.c  sub_handler.c  sub_handler_test.c  subscribe_handle.c  unsub_handler.c  unsub_handler_test.c  unsubscribe_handle.c  (+3 more)
nanomq/apps/: .kdev_include_paths  CMakeLists.txt  bench.c  broker.c  broker.h  broker_test.c  client.c  mq.c  nnb_opt.c  nng_bridge.c  nng_proxy.c  nngcat.c  rest-server_test.c  webhook_test.c  zmq_gateway.c  zmq_proxy.c
nanomq/apps/nngcat/: CMakeLists.txt
nanomq/include/: acl_handler.h  acl_hazard.h  apps.h  bench.h  bridge.h  broker.h  client.h  cmd.h  cmd_proc.h  conf_api.h  exchange.h  file.h  hashmap.h  license.h  license_dk.h  license_std.h  mq.h  mqtt_api.h  nano_sdk.h  nanomq.h  nanomq_rule.h  nnb_help.h  nnb_opt.h  nng_bridge.h  nng_proxy.h  packet.h  plugin_canp_stream.h  plugin_spi_stream.h  process.h  property_handle.h  pub_handler.h  repub.h  rest_api.h  stream_inject.h  stream_plugin.h  stream_plugin_internal.h  sub_handler.h  unsub_handler.h  version.h  web_server.h  (+4 more)
nanomq/libs/: base64.h  cJSON.c
nanomq/plugin/: CMakeLists.txt  can_pipeline_sample.c  plugin.c  plugin_spi_stream.c  plugin_user_property.c
nanomq/plugin/templates/: Makefile  README.md  self_verify.sh  skeleton.c
nanomq/skill/: CMakeLists.txt  README.md
nanomq/skill/include/: nano_skill.h
nanomq/skill/src/: nano_skill_batch.c  nano_skill_dbc_stub.c  nano_skill_time.c  nano_skill_window.c
nanomq/tests/: CMakeLists.txt  aws-cert.pem  aws-key.pem  bridge_aws_test.c  bridge_exclusion_test.c  bridge_muti_bridge_test.c  bridge_rap_rh_test.c  bridge_test.c  bridge_tls_test.c  bridge_try_private_test.c  broker_test.c  broker_tls_test.c  hashmap_test.c  http_server_test.c  mqtt_api_test.c  nanomq_aws_test.conf  nanomq_bridge_test.conf  nanomq_bridge_tls_test.conf  nanomq_muti_bridges_test.conf  nanomq_test.conf  nanomq_test.h  nmq_ws_test.c  parquet_test.c  properties_test.c  pub_handler_test.c  quic_smoke_test.c  rule_engine_test.c  sub_handler_test.c  tests_api.h  unsub_handler_test.c  webhook_base62_test.c  webhook_base64_test.c  webhook_test.c
nanomq/tests/fuzz/: CMakeLists.txt  README.md  mqtt.dict
nanomq/tests/fuzz/corpus/: v3_publish  v5_publish
nanomq_cli/: CMakeLists.txt  bench.c  client.c  encryption.c  iceoryx_cli.c  iceoryx_client.c  main.c  nftp_client.c  nnb_opt.c  nng_proxy.c  nngcat.c  proxy.c  quic_client.c  rest_api.c  rule_ctrl.c  vsomeip_gateway.cc  web_server.c  zmq_gateway.c
nanomq_cli/dds2mqtt/: .gitignore  HelloWorldMQTTTypes.c  HelloWorldMQTTTypes.h  HelloWorld_mqtt_conversion.c  HelloWorld_mqtt_conversion.h  README.md  dds2mqtt.config  dds_client.c  dds_mqtt_type_conversion.c  dds_mqtt_type_conversion.h  dds_type.idl  dds_utils.c  dds_utils.h  idl_convert.c  idl_convert.h  mqtt_client.c  mqtt_client.h  publisher.c  subscriber.c  vector.c  vector.h
nanomq_cli/dds2mqtt/doc/: Shared_memory.md  dds.gv  infra.gv
nanomq_cli/include/: bench.h  client.h  dds_client.h  encryption.h  iceoryx_client.h  main.h  nftp _client.h  nftp_client.h  nnb_help.h  nnb_opt.h  nngcat.h  proxy.h  quic_client.h  rest_api.h  rule_ctrl.h  vsomeip_gateway.h  web_server.h  zmq_gateway.h
(+832 files in other folders)
